# AIGuideGenerator

./: .env.example  .gitignore  README.md  analyze_latest.py  docker-compose.yml  package-lock.json
apps/api/: Dockerfile  _diag_tmp.py  pyproject.toml  pytest.ini  test_phase2.py  test_phase3.py  test_visual_facts.py  test_visual_facts2.py
apps/api/app/: config.py  db.py  logging_filters.py  main.py  worker_main.py
apps/api/app/ai/: __init__.py  base.py  fake_provider.py  local_client.py  local_models.py  openai_provider.py
apps/api/app/jobs/: handlers.py  queue.py
apps/api/app/media/: probe.py
apps/api/app/models/: job.py  session.py
apps/api/app/pipeline/: common.py  evidence.py  internal_tool_filter.py  normalize_actions.py  orchestrator.py  safety.py  timeline_compress.py
apps/api/app/sanitize/: __init__.py  categories.py  rehydrate.py  sanitizer.py
apps/api/app/schemas/: guide.py  job.py  session.py
apps/api/app/services/: guide_export.py  session_service.py
apps/api/app/storage/: base.py  local.py
apps/api/tests/: test_attach_evidence.py  test_guide_export.py  test_guide_prompt.py  test_health.py  test_integration_upload.py  test_internal_tool_filter.py  test_local_client.py  test_local_storage.py  test_normalize_actions.py  test_ocr_frames_local.py  test_parse_screens.py  test_pipeline.py  test_public_artifacts.py  test_redaction_map_filter.py  test_rehydrate.py  test_reprocess.py  test_safety.py  test_sanitize_categories.py  test_sanitize_pipeline.py  test_sanitizer.py  test_session_progress.py  test_status_transitions.py  test_timeline_compress.py  test_transcribe_local.py
apps/local-ai/: Dockerfile  pyproject.toml
apps/local-ai/app/: config.py  main.py  ocr_engine.py  schemas.py  storage_resolver.py  stt_engine.py
apps/local-ai/tests/: test_endpoints.py  test_ocr_engine.py  test_storage_resolver.py  test_stt_engine.py
(+67 files in other folders)
