[project]
name = "guide-generator-api"
version = "0.1.0"
description = "Guide Generator API + worker"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "sqlalchemy[asyncio]>=2.0.30,<3",
  "asyncpg>=0.29,<1",
  "python-multipart>=0.0.9,<1",
  "aiofiles>=23.2,<24",
  "openai>=1.40,<2",
  "Pillow>=10.3,<12",
  "imagehash>=4.3,<5",
  "python-docx>=1.1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "httpx>=0.27,<1",
  "aiosqlite>=0.20,<1",
  "asgi-lifespan>=2.1,<3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
