[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai"
version = "0.1.0"
description = "Internal-only local-AI service: local STT (Phase C) and OCR (Phase D)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# faster-whisper is an OPTIONAL dependency so the service can start (stub
# mode) without downloading the model. The Dockerfile installs this group.
stt = [
    "faster-whisper>=1.1",
]
# OCR via Tesseract. Requires the `tesseract-ocr` apt package + language
# data installed by the Dockerfile. Pillow is used to load frames.
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]
